RESOLVED FIXED107391
Fix disambiguation popup for new-style page scale
https://bugs.webkit.org/show_bug.cgi?id=107391
Summary Fix disambiguation popup for new-style page scale
Tien-Ren Chen
Reported 2013-01-19 19:35:58 PST
Fix disambiguation popup for new-style page scale
Attachments
Patch (8.67 KB, patch)
2013-01-19 19:41 PST, Tien-Ren Chen
no flags
Patch (28.23 KB, patch)
2013-01-22 16:46 PST, Tien-Ren Chen
no flags
Patch (7.33 KB, patch)
2013-01-22 16:50 PST, Tien-Ren Chen
no flags
Patch (7.85 KB, patch)
2013-01-28 21:29 PST, Tien-Ren Chen
no flags
Tien-Ren Chen
Comment 1 2013-01-19 19:41:03 PST
WebKit Review Bot
Comment 2 2013-01-19 19:43:59 PST
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
WebKit Review Bot
Comment 3 2013-01-19 19:50:02 PST
Comment on attachment 183653 [details] Patch Attachment 183653 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15970434
Peter Beverloo (cr-android ews)
Comment 4 2013-01-19 20:03:59 PST
Comment on attachment 183653 [details] Patch Attachment 183653 [details] did not pass cr-android-ews (chromium-android): Output: http://queues.webkit.org/results/15972426
Adam Barth
Comment 5 2013-01-20 00:28:00 PST
Comment on attachment 183653 [details] Patch Can we test this change? Also, it looks like you're failing the Chromium EWS bots.
Tien-Ren Chen
Comment 6 2013-01-22 16:46:43 PST
Tien-Ren Chen
Comment 7 2013-01-22 16:50:42 PST
Tien-Ren Chen
Comment 8 2013-01-28 21:29:05 PST
Tien-Ren Chen
Comment 9 2013-01-28 21:29:45 PST
Changes from last patch: * Added WebFrameTest.DisambiguationPopupPageScale unit test * Rebased
Adam Barth
Comment 10 2013-01-28 21:32:51 PST
Comment on attachment 185148 [details] Patch Thanks for the test.
WebKit Review Bot
Comment 11 2013-01-28 23:30:58 PST
Comment on attachment 185148 [details] Patch Clearing flags on attachment: 185148 Committed r141062: <http://trac.webkit.org/changeset/141062>
WebKit Review Bot
Comment 12 2013-01-28 23:31:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.